--- a/src/components/01/styles.module.scss
+++ b/src/components/01/styles.module.scss
@@ -1,3 +1,23 @@
-.title {
-  color: red;
+.box {
+  position: relative;
+  height: 100%;
+  overflow-y: hidden;
+  .mask {
+    position: absolute;
+    top: 70%;
+    background-color: rgba(0, 0, 0, 0.9);
+    height: 100%;
+    width: 100%;
+    transition: 0.5s;
+    &:hover {
+      top: 0;
+    }
+    .title {
+      text-align: center;
+      color: #fff;
+      font-size: 4rem;
+      height: 30%;
+      line-height: 100%;
+    }
+  }
 }
