--- a/src/styles/_header.module.scss
+++ b/src/styles/_header.module.scss
@@ -1,16 +1,42 @@
 .header {
+  /*
   display: flex;
   flex-direction: column; 
   justify-content: center; 
+  */
   height: 30vh;
   margin-bottom: 5vh;
+  color: #aaa;
 
   .headerTitle {
+    margin-top: 10vh;
     margin-right: 15vw;
     margin-bottom: 30px;
     font-size: 6rem;
-    color: #aaa;
     font-weight: 500;
     text-align: right;
   }
+  .link {
+    margin-left: 10vw;;
+    color: #aaa;
+    font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: 2px;
+    text-decoration: underline;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    height: 40vh;
+    margin-bottom: 3vh;
+    border-bottom: 1px solid #ccc;
+    .headerTitle {
+      margin-top: 5vh;
+      font-size: 2.5rem;
+    }
+    .link {
+      font-size: 1.8rem;
+    }
+  } 
 }
