--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -2,10 +2,104 @@
 
 html {
   font-size: 62.5%;
-  box-sizing: border-box;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Roboto,
+    "Segoe UI",
+    "Helvetica Neue",
+    HelveticaNeue,
+    YuGothic,
+    "Yu Gothic Medium",
+    "Yu Gothic",
+    Verdana,
+    Meiryo,
+    sans-serif;
 }
 
 main {
-  width: 60%;
-  margin: 50px auto;
+  width: 50%;
+  margin: 80px auto;
+  color: #444;
+
+  h1,
+  h2,
+  h3,
+  p {
+    line-height: 1.5;
+  }
+
+  h1 {
+    margin-bottom: 50px;
+    border-bottom: 6px solid #444;
+    font-size: 5rem;
+  }
+  h2 {
+    margin: 30px 0;
+    font-size: 3.8rem;
+  }
+  h3 {
+    margin-bottom: 30px;
+    font-size: 3.2rem;
+  }
+  p {
+    margin-bottom: 15px;
+    font-size: 2rem;
+    text-indent: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    width: 90%;
+
+    h1 {
+      margin-bottom: 30px;
+      font-size: 4rem;
+    }
+    h2 {
+      font-size: 3rem;
+    }
+    h3 {
+      font-size: 2.5rem;
+    }
+    p {
+      font-size: 1.6rem;
+    }
+  } 
+}
+main {
+
+}
+.gatsby-highlight {
+  width: 93%;
+  background-color: #444;
+  border-radius: 0 .3rem .3rem .3rem;
+  margin: 0 0 50px;
+  padding: .6em;
+  overflow: auto;
+  font-size: 1.6rem;
+}
+
+// 協調行
+.gatsby-highlight-code-line {
+  background-color: #066;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid #066;
+}
+
+.gatsby-highlight pre[class*="language-"] {
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  overflow: initial;
+  float: left;
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding-left: 2.5em; 
 }
