--- a/src/styles/_index.module.scss
+++ b/src/styles/_index.module.scss
@@ -12,3 +12,14 @@
     border: 1px solid #ddd;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .wrapper {
+    width: 90%;
+
+    .box {
+      width: 40vw;
+      height: 40vw;
+    }
+  } 
+}
