--- a/src/components/01/styles.module.scss
+++ b/src/components/01/styles.module.scss
@@ -2,22 +2,62 @@
   position: relative;
   height: 100%;
   overflow-y: hidden;
+  > p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #444;
+    font-size: 5rem;
+  }
   .mask {
     position: absolute;
-    top: 70%;
+    top: 100%;
+    transform: translateY(-70px);
     background-color: rgba(0, 0, 0, 0.9);
     height: 100%;
     width: 100%;
     transition: 0.5s;
     &:hover {
       top: 0;
+      transform: none;
     }
-    .title {
+    p {
       text-align: center;
       color: #fff;
-      font-size: 4rem;
-      height: 30%;
-      line-height: 100%;
+      font-size: 3.3rem;
+      height: 70px;
+      line-height: 70px;
+      &:not(:first-child) {
+        width: 90%;
+        margin: 10px auto 0;
+        font-size: 2rem;
+        height: auto;
+        line-height: 1.5;
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+      }
     }
   }
+}
+
+@media screen and (max-width: 768px) {
+  .box {
+    > p {
+      font-size: 3rem;
+    }
+    .mask {
+      transform: translateY(-40px);
+      p {
+        font-size: 2rem;
+        height: 40px;
+        line-height: 40px;
+        &:not(:first-child) {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  } 
 }
