--- a/src/styles/_header.module.scss
+++ b/src/styles/_header.module.scss
@@ -13,7 +13,7 @@
     text-align: right;
   }
   .link {
-    margin-left: 10vw;;
+    margin-left: 15vw;
     color: #aaa;
     font-size: 2.5rem;
     font-weight: 500;
@@ -24,12 +24,15 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    height: 20vh;
-    margin-bottom: 3vh;
+    height: 15vh;
+    margin-bottom: 4vh;
     border-bottom: 1px solid #ccc;
     .headerTitle {
-      margin-top: 5vh;
+      margin-top: 4vh;
+      margin-bottom: 20px;
+      margin: 4vh auto 20px;
       font-size: 2.5rem;
+      text-align: center;
     }
     .link {
       font-size: 1.6rem;
