--- a/src/styles/_header.module.scss
+++ b/src/styles/_header.module.scss
@@ -19,6 +19,10 @@
     font-weight: 500;
     letter-spacing: 1px;
     text-decoration: underline;
+    transition: 0.3s;
+    &:hover {
+      color: skyblue;
+    }
   }
 }
 
