--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 /*! destyle.css v3.0.0 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 
 /* Reset box-model and set borders */
@@ -445,25 +447,45 @@ main {
   h2,
   h3,
   p {
-    line-height: 1.5;
+    line-height: 1.65;
   }
 
   h1 {
+    width: 95%;
     margin-bottom: 50px;
-    border-bottom: 6px solid #444;
-    font-size: 5rem;
+    font-size: 4rem;
+    &::after {
+      content: "";
+      display: block;
+      height: 7px;
+      background: -webkit-linear-gradient(to right, $main-color, $main-color2);
+      background: linear-gradient(to right, $main-color, $main-color2);
+    }
   }
   h2 {
+    position: relative;
     margin: 30px 0;
-    font-size: 3.8rem;
+    font-size: 3.3rem;
+    padding-left: 30px;
+    &:after {
+      content: '';
+      position: absolute;
+      top: 55%;
+      left: 0;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+      border: 4px solid $main-color2;
+      border-radius: 100%;
+    }
   }
   h3 {
     margin-bottom: 30px;
-    font-size: 3.2rem;
+    font-size: 2.5rem;
   }
   p {
     margin-bottom: 15px;
-    font-size: 2rem;
+    font-size: 1.75rem;
     text-indent: 0.8rem;
   }
   .gatsby-resp-image-wrapper {
@@ -502,8 +524,10 @@ main {
     }
   }
   .language-text {
-    color: #444 !important;
+    display: inline-block;
+    padding: 0 8px 0 0 !important;
     background: #ddd !important;
+    color: #444 !important;
   }
 }
 
