--- a/src/styles/_header.module.scss
+++ b/src/styles/_header.module.scss
@@ -1,3 +1,5 @@
+@import "../scss/variables";
+
 .header {
   height: 25vh;
   margin-bottom: 5vh;
@@ -18,10 +20,11 @@
     font-size: 2.5rem;
     font-weight: 500;
     letter-spacing: 1px;
-    text-decoration: underline;
     transition: 0.3s;
     &:hover {
-      color: skyblue;
+      background: -webkit-linear-gradient(0deg, $main-color2, $main-color);//背景色にグラデーションを指定
+      -webkit-background-clip: text;//テキストでくり抜く
+      -webkit-text-fill-color: transparent;//くり抜いた部分は背景を表示
     }
   }
 }
