--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -459,7 +459,7 @@ main {
       display: block;
       height: 7px;
       background: -webkit-linear-gradient(to right, $main-color, $main-color2);
-      background: linear-gradient(to right, $main-color, $main-color2);
+      background: linear-gradient(to right, $main-color2, $main-color);
     }
   }
   h2 {
@@ -539,19 +539,30 @@ main {
       font-size: 3.5rem;
     }
     h2 {
-      font-size: 2.8rem;
+      font-size: 2.1rem;
     }
     h3 {
-      font-size: 2.5rem;
+      font-size: 1.8rem;
     }
     p {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
+    }
+    blockquote {
+      padding: 10px 12px;
+      width: 85%;
+      border-left: 6px solid #bbb;
+      border-radius: 0;
+      p {
+        font-size: 1.3rem;
+        line-height: 1.5;
+      }
+      &::before {
+        display: none;
+      }
     }
   } 
 }
-main {
 
-}
 .gatsby-highlight {
   width: 93%;
   background-color: #444;
