--- a/src/posts/01/styles.module.scss
+++ b/src/posts/01/styles.module.scss
@@ -48,9 +48,6 @@
         }
       }
     }
-    .boxa {
-      overflow-y: auto;
-    }
   }
 }
 
@@ -77,44 +74,52 @@
   } 
 }
 
-.boxa {
-  position: relative;
-  height: 100%;
-  > p {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #444;
-    font-size: 5rem;
-  }
-  .mask {
-    position: absolute;
-    top: 100%;
-    transform: translateY(-70px);
-    background-color: rgba(0, 0, 0, 0.9);
+.boxWrapperA {
+  border: 1px solid #eee;
+  width: 15vw;
+  height: 15vw;
+  margin: 50px 0 200px;
+  .boxa {
+    position: relative;
     height: 100%;
+    margin-bottom: 100px;
     width: 100%;
-    &:hover {
-      top: 0;
-      transform: none;
+    > p {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #444;
+      font-size: 3rem;
     }
-    p {
-      text-align: center;
-      color: #fff;
-      font-size: 3.3rem;
-      height: 70px;
-      line-height: 70px;
-      &:not(:first-child) {
-        width: 90%;
-        margin: 10px auto 0;
-        font-size: 2rem;
-        height: auto;
-        line-height: 1.5;
-        display: -webkit-box;
-        overflow: hidden;
-        -webkit-line-clamp: 6;
-        -webkit-box-orient: vertical;
+    .mask {
+      position: absolute;
+      top: 100%;
+      transform: translateY(-70px);
+      background-color: rgba(0, 0, 0, 0.9);
+      height: 100%;
+      width: 100%;
+      &:hover {
+        top: 0;
+        transform: none;
+      }
+      p {
+        text-align: center;
+        color: #fff;
+        font-size: 2.3rem;
+        height: 70px;
+        line-height: 70px;
+        &:not(:first-child) {
+          width: 90%;
+          margin: 10px auto 0;
+          font-size: 1.7rem;
+          height: auto;
+          line-height: 1.4;
+          display: -webkit-box;
+          overflow: hidden;
+          -webkit-line-clamp: 6;
+          -webkit-box-orient: vertical;
+        }
       }
     }
   }
