--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -443,6 +443,11 @@ main {
   margin: 80px auto;
   color: #444;
 
+  a {
+    color: #444;
+    text-decoration: underline;
+  }
+
   h1,
   h2,
   h3,
