--- a/src/styles/_index.module.scss
+++ b/src/styles/_index.module.scss
@@ -5,19 +5,21 @@
   justify-content: center;
   gap: 5px;
   flex-wrap: wrap;
-  .box {
-    width: 20vw;
-    height: 20vw;
-    border: 1px solid #ddd;
-  }
 }
 
-@media screen and (max-width: 768px) {
+.box {
+  width: 20vw;
+  height: 20vw;
+  border: 1px solid #ddd;
+}
+
+@media (max-width: 768px) {
   .wrapper {
     width: 90%;
-    .box {
-      width: 40vw;
-      height: 40vw;
-    }
   } 
+
+  .box {
+    width: 40vw;
+    height: 40vw;
+  }
 }
