--- a/src/styles/_pageInfo.module.scss
+++ b/src/styles/_pageInfo.module.scss
@@ -2,18 +2,20 @@
   width: 20vw;
   margin: 40px auto 20px;
   text-align: center;
+
   time {
     display: block;
     font-size: 1.8rem;
     font-weight: 500;
+
     &:first-child {
       margin-bottom: 10px;
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .wrapper {
     width: 60vw;
-  } 
+  }
 }
